# ifxOpt

./: CMakeLists.txt  README
include/: ifxArgEntryBase.h  ifxOpt.h  ifxOptEntry.h  ifxOptEntryBase.h  ifxOptOptionCodes.h  ifxOptResultCodes.h  ifxValidator.h
include/utils/: ifxSharedPtr.h
src/: CMakeLists.txt  ifxArgEntryBase.cpp  ifxDbg.h  ifxOpt.cpp  ifxOptEntry.cpp  ifxOptEntryBase.cpp  ifxOptEntryInt.cpp  ifxOptEntryInt.h  ifxValidator.cpp
src/internal/: ifxArgEntry.cpp  ifxArgEntry.h  ifxCustomValidator.h  ifxDbg.h  ifxInternalUtils.cpp  ifxInternalUtils.h  ifxOptEntry.h  ifxOptEntry_int.cpp  ifxOptEntry_string.cpp  internal_ifxOpt.h  internal_ifxOptEntry.h  internal_ifxOptEntryImpl.h  internal_ifxOptImpl.h
test/: CMakeLists.txt  ifxOptTestMain.cpp
